Align global map to the right, fix index.html as it was missed in previous commit

--- a/public/patient/assets/css/es.css
+++ b/public/patient/assets/css/es.css
@@ -45,6 +45,8 @@
   display: inline-block;
   float: right;
   padding: 4px 10px;
+  position: absolute;
+  right: 0;
 }
 
 .nav_menu_map_link {
